--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -32,7 +32,6 @@
         android:layout_width="wrap_content"
         android:layout_height="24dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
 
         android:text="Sundarbon Mangrove Forest, Khulna"
         android:textColor="@android:color/background_dark"
@@ -159,7 +158,7 @@
         android:layout_height="50dp"
         android:background="@drawable/book_button_bg"
 
-        android:text="Confirm Booking"
+        android:text="Start Booking Trip"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/textView14"
