--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -173,10 +173,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
 
+        android:layout_marginTop="8dp"
         android:text="About "
         android:textColor="@android:color/background_dark"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView8" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView9" />
 
     <TextView
         android:id="@+id/textView14"
