--- a/app/src/main/res/layout/top_places_row_item.xml
+++ b/app/src/main/res/layout/top_places_row_item.xml
@@ -26,16 +26,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:text="AM Lake"
+        android:text="Sajek"
         app:layout_constraintStart_toEndOf="@+id/place_image"
-        tools:layout_editor_absoluteY="16dp" />
+        tools:layout_editor_absoluteY="16dp"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/country_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
-        android:text="India"
+        android:text="Bandarban"
         app:layout_constraintStart_toStartOf="@+id/place_name"
         app:layout_constraintTop_toBottomOf="@+id/place_name" />
 
